snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__mpdt__mpdtreverse.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/mpdt/mpdtreverse.cc",
    ),
    start_line: 1,
    end_line: 75,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 7,
            exit_sum: 7,
            total_space_functions: 0,
            exit_min: 7,
            exit_max: 7,
        },
        cognitive: Stats {
            structural: 7,
            structural_sum: 7,
            structural_min: 7,
            structural_max: 7,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 10.0,
            cyclomatic: 10.0,
            n: 1,
            cyclomatic_max: 10.0,
            cyclomatic_min: 10.0,
        },
        halstead: Stats {
            u_operators: 23,
            operators: 157,
            u_operands: 53,
            operands: 109,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 75,
                unit: true,
                sloc_min: 75,
                sloc_max: 75,
            },
            ploc: Ploc {
                lines: {
                    64,
                    61,
                    55,
                    52,
                    49,
                    46,
                    43,
                    40,
                    37,
                    31,
                    28,
                    25,
                    22,
                    19,
                    16,
                    74,
                    7,
                    68,
                    71,
                    62,
                    59,
                    56,
                    50,
                    47,
                    44,
                    38,
                    35,
                    32,
                    29,
                    26,
                    14,
                    11,
                    8,
                    5,
                    66,
                    60,
                    57,
                    54,
                    51,
                    42,
                    39,
                    36,
                    33,
                    27,
                    24,
                    21,
                    18,
                    15,
                    12,
                    9,
                    70,
                    73,
                },
                ploc_min: 52,
                ploc_max: 52,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 32,
                lloc_min: 32,
                lloc_max: 32,
            },
            space_count: 1,
            blank_min: 19,
            blank_max: 19,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 266.0,
            halstead_vocabulary: 76.0,
            halstead_volume: 1661.9487185759936,
            cyclomatic: 10.0,
            sloc: 75.0,
            comments_percentage: 0.05333333333333334,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
